cmake_minimum_required(VERSION 3.22)
project(A1_P1_A_20210046_20210508_20210524)

set(CMAKE_CXX_STANDARD 20)

add_executable(A1_P1_A_20210046_20210508_20210524 main.cpp A1_P1_A_20210046_20210508_20210524.h A1_P1_A_20210046_20210508_20210524.h A1_P1_A_20210046_20210508_20210524.cpp A1_P1_A_20210046_20210508_20210524.cpp A1_P1_A_20210046_20210508_20210524.h)
